[gd_scene load_steps=40 format=2]

[ext_resource path="res://Odalar/Banyo.png" type="Texture" id=1]
[ext_resource path="res://Karakter/Soldan/Soldan2/6.png" type="Texture" id=2]
[ext_resource path="res://Karakter/Arkadan/Arkadan2/6.png" type="Texture" id=3]
[ext_resource path="res://Karakter/Arkadan/Arkadan2/7.png" type="Texture" id=4]
[ext_resource path="res://Karakter/Sagdan/Sagdan2/3.png" type="Texture" id=5]
[ext_resource path="res://Karakter/Soldan/Soldan2/3.png" type="Texture" id=6]
[ext_resource path="res://Karakter/Soldan/Soldan2/2.png" type="Texture" id=7]
[ext_resource path="res://Karakter/Soldan/Soldan2/1.png" type="Texture" id=8]
[ext_resource path="res://Karakter/Arkadan/Arkadan2/2.png" type="Texture" id=9]
[ext_resource path="res://Karakter/Sagdan/Sagdan2/2.png" type="Texture" id=10]
[ext_resource path="res://Karakter/Soldan/Soldan2/7.png" type="Texture" id=11]
[ext_resource path="res://Karakter/Soldan/Soldan2/5.png" type="Texture" id=12]
[ext_resource path="res://Karakter/Arkadan/Arkadan2/3.png" type="Texture" id=13]
[ext_resource path="res://Karakter/Arkadan/Arkadan2/1.png" type="Texture" id=14]
[ext_resource path="res://Karakter/Arkadan/Arkadan2/8.png" type="Texture" id=15]
[ext_resource path="res://Karakter/Arkadan/Arkadan2/5.png" type="Texture" id=16]
[ext_resource path="res://Karakter/Soldan/Soldan2/4.png" type="Texture" id=17]
[ext_resource path="res://Karakter/Sagdan/Sagdan2/4.png" type="Texture" id=18]
[ext_resource path="res://Karakter/önden/1.png" type="Texture" id=19]
[ext_resource path="res://Karakter/önden/2.png" type="Texture" id=20]
[ext_resource path="res://Karakter/önden/3.png" type="Texture" id=21]
[ext_resource path="res://Karakter/önden/4.png" type="Texture" id=22]
[ext_resource path="res://Karakter/önden/6.png" type="Texture" id=23]
[ext_resource path="res://Karakter/önden/7.png" type="Texture" id=24]
[ext_resource path="res://Karakter/Sagdan/Sagdan2/5.png" type="Texture" id=25]
[ext_resource path="res://Karakter/Sagdan/Sagdan2/1.png" type="Texture" id=26]
[ext_resource path="res://Karakter/Sagdan/Sagdan2/7.png" type="Texture" id=27]
[ext_resource path="res://Karakter/Sagdan/Sagdan2/6.png" type="Texture" id=28]
[ext_resource path="res://Karakter/önden/5.png" type="Texture" id=29]
[ext_resource path="res://Karakter/önden/8.png" type="Texture" id=30]
[ext_resource path="res://Scriptler/Oyuncu.gd" type="Script" id=31]
[ext_resource path="res://Sesler/Yürüme.mp3" type="AudioStream" id=32]
[ext_resource path="res://Sesler/Yağmur.mp3" type="AudioStream" id=33]
[ext_resource path="res://Scriptler/Banyo.gd" type="Script" id=34]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 383.801, -135.818 )
b = Vector2( -184.593, 86.0156 )

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( -129.355, -53.4486 )
b = Vector2( 589.645, 92.5514 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -140.35, 16.0625 )
b = Vector2( 1134.69, 14.8026 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 30 ) ],
"loop": true,
"name": "on",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 2 ), ExtResource( 11 ) ],
"loop": true,
"name": "sol",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 9 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 15 ) ],
"loop": true,
"name": "arka",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 18 ), ExtResource( 25 ), ExtResource( 28 ), ExtResource( 27 ) ],
"loop": true,
"name": "sag",
"speed": 5.0
} ]

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 121.025, -3.45935 )
b = Vector2( -128.487, -5.94232 )

[node name="Banyo" type="Node2D"]
script = ExtResource( 34 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 769.418, 432.927 )
scale = Vector2( 0.795955, 0.795955 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 429.355, 780.449 )
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 940.355, 697.449 )
shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 402.355, 845.449 )
shape = SubResource( 3 )

[node name="Oyuncu" type="KinematicBody2D" parent="."]
position = Vector2( 1402.46, 704.162 )
rotation = -0.0226893
script = ExtResource( 31 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Oyuncu"]
position = Vector2( 19.0958, -64.7552 )
scale = Vector2( 1.00037, 0.760047 )
frames = SubResource( 4 )
animation = "sol"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Oyuncu"]
position = Vector2( 2.90125, 156.558 )
shape = SubResource( 5 )

[node name="Yagmur" type="AudioStreamPlayer2D" parent="Oyuncu"]
position = Vector2( -882.431, -600.524 )
rotation = 0.0226893
stream = ExtResource( 33 )
volume_db = 21.224
autoplay = true

[node name="Yurume1" type="AudioStreamPlayer2D" parent="Oyuncu"]
position = Vector2( -882.431, -600.524 )
rotation = 0.0226893
stream = ExtResource( 32 )
attenuation = 0.116629

[node name="Yurume2" type="AudioStreamPlayer2D" parent="Oyuncu"]
position = Vector2( -882.431, -600.524 )
rotation = 0.0226893
stream = ExtResource( 32 )
attenuation = 0.116629

[node name="Yurume3" type="AudioStreamPlayer2D" parent="Oyuncu"]
position = Vector2( -882.431, -600.524 )
rotation = 0.0226893
stream = ExtResource( 32 )
attenuation = 0.116629

[node name="Yurume4" type="AudioStreamPlayer2D" parent="Oyuncu"]
position = Vector2( -882.431, -600.524 )
rotation = 0.0226893
stream = ExtResource( 32 )
attenuation = 0.116629

[node name="btn_yatak" type="Button" parent="."]
margin_left = 44.0
margin_top = 38.0
margin_right = 220.0
margin_bottom = 92.0
text = "Yatak Odasi"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="btn_yatak" to="." method="_on_btn_yatak_pressed"]
